@@ -1,3 +1,7 @@
+2013-03-16  Rafaël Carré  <funmanvideolan.org>
+
+	* GetFileAttributesA(): remove
+
 2013-01-23  Jean-Baptiste Kempf  <jbvideolan.org>
 
 	* GetFileAttributesA() and GetFileAttributesW() replacements
